# plasma-feedreader

./: CMakeLists.txt  README.md
plasmoid/: metadata.desktop
plasmoid/contents/ui/: CompactRepresentation.qml  main.qml
process/: CMakeLists.txt  plugin.cpp  plugin.h  process.cpp  process.h  qmldir
